--- a/OldiOS/OldiOS.Shared/Apps/UIKit/UITableViewCell.razor.css
+++ b/OldiOS/OldiOS.Shared/Apps/UIKit/UITableViewCell.razor.css
@@ -47,6 +47,9 @@
     flex: 1;
     display: flex;
     flex-grow: 1;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .cell-text {
@@ -55,6 +58,9 @@
     font-size: 34px;
     font-weight: bold;
     flex-grow: 1;
+    text-overflow: ellipsis;
+    overflow:hidden;
+    white-space:nowrap;
 }
 .uitableviewcell.selectable:active .cell-text {
         color: white;
@@ -65,6 +71,9 @@
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 28px;
     margin-top: 4px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .cell-accessory {
