more style stuff

--- a/OldiOS/OldiOS.Shared/Apps/UIKit/UITableView.razor
+++ b/OldiOS/OldiOS.Shared/Apps/UIKit/UITableView.razor
@@ -9,5 +9,5 @@
     public RenderFragment? ChildContent { get; set; }
     
     [Parameter]
-    public bool Grouped { get; set; } = true;
+    public bool Grouped { get; set; } = false;
 }
