--- a/OldiOS/OldiOS.Shared/Apps/UIKit/UITabBar.razor.css
+++ b/OldiOS/OldiOS.Shared/Apps/UIKit/UITabBar.razor.css
@@ -4,7 +4,8 @@
     left: 0;
     right: 0;
     height: 98px;
-    background: linear-gradient(to bottom, #434343 0%, #2d2d2d 2%, #1c1c1c 50%, #0a0a0a 100%);
+    /*    background: linear-gradient(to bottom, #434343 0%, #2d2d2d 2%, #1c1c1c 50%, #0a0a0a 100%);*/
+    background-image: url(images/uikit/UIButtonBarBlackOpaqueBackgroundTall@2x.png);
     border-top: 1px solid #000;
     display: flex;
     justify-content: space-around;
