--- a/OldiOS/OldiOS.Shared/Apps/Music/Pages/MoreRoot.razor.css
+++ b/OldiOS/OldiOS.Shared/Apps/Music/Pages/MoreRoot.razor.css
@@ -2,8 +2,8 @@
     position: relative;
     width: 100%;
     height: 100%;
-    background: #000;
     display: flex;
+    background: #E8E8ED;
     flex-direction: column;
 }
 
